Landing page y formularios

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,7 +18,7 @@
       </nav>
   
       <div>
-        <button class="bg-[#2D6A4F]  font-semibold px-4 py-2 rounded hover:bg-[#1B4332] transition">
+        <button class="bg-[#5e967d]  font-semibold px-4 py-2 rounded hover:bg-[#1B4332] transition">
           Soy productor
         </button>
       </div>
