--- a/src/app/create-product/create-product.component.html
+++ b/src/app/create-product/create-product.component.html
@@ -1,39 +1,39 @@
 <div class="form-container">
-    <h2>Create Product</h2>
-    <form>
-      <div class="form-group">
-        <label for="name">Product Name:</label>
-        <input type="text" id="name" class="form-control" [(ngModel)]="product.name" name="name" required />
-      </div>
-  
-      <div class="form-group">
-        <label for="description">Description:</label>
-        <textarea id="description" class="form-control" [(ngModel)]="product.description" name="description" required></textarea>
-      </div>
-  
-      <div class="form-group">
-        <label for="ingredients">Ingredients (comma separated):</label>
-        <input type="text" id="ingredients" class="form-control" [(ngModel)]="product.ingredients" name="ingredients" required />
-      </div>
-  
-      <div class="form-group">
-        <label for="category">Category:</label>
-        <select id="category" class="form-control" [(ngModel)]="product.category" name="category" required>
-          <option value="Food">Food</option>
-          <option value="Accessory">Accessory</option>
-        </select>
-      </div>
-  
-      <div class="form-group">
-        <label for="manufactureDate">Manufacture Date:</label>
-        <input type="date" id="manufactureDate" class="form-control" [(ngModel)]="product.manufactureDate" name="manufactureDate" required />
-      </div>
-  
-      <button type="submit" class="btn btn-primary">Create Product</button>
-    </form>
-  
-    <div *ngIf="qrCodeUrl">
-      <h3>Generated QR Code:</h3>
-      <img [src]="qrCodeUrl" alt="QR Code" />
+  <h2 class="text-2xl font-Merriweather text-gray-800 mb-6">Crear Producto</h2>
+  <form class="space-y-4">
+    <div class="form-group">
+      <label for="name" class="block text-gray-700 text-sm font-bold mb-2">Nombre del Producto:</label>
+      <input type="text" id="name" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" [(ngModel)]="product.name" name="name" required placeholder="Ej: Dogfood - Balance" />
     </div>
+
+    <div class="form-group">
+      <label for="description" class="block text-gray-700 text-sm font-bold mb-2">Descripción:</label>
+      <textarea id="description" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" [(ngModel)]="product.description" name="description" required placeholder="Ej: Alimento completo y equilibrado para perros adultos de todas las razas."></textarea>
+    </div>
+
+    <div class="form-group">
+      <label for="ingredients" class="block text-gray-700 text-sm font-bold mb-2">Ingredientes (separados por coma):</label>
+      <input type="text" id="ingredients" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" [(ngModel)]="product.ingredients" name="ingredients" required placeholder="Ej: Carne de res, zanahorias, ..." />
+    </div>
+
+    <div class="form-group">
+      <label for="category" class="block text-gray-700 text-sm font-bold mb-2">Categoría:</label>
+      <select id="category" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" [(ngModel)]="product.category" name="category" required>
+        <option value="Perros">Perros</option>
+        <option value="Gatos">Gatos</option>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <label for="manufactureDate" class="block text-gray-700 text-sm font-bold mb-2">Fecha de Fabricación:</label>
+      <input type="date" id="manufactureDate" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" [(ngModel)]="product.manufactureDate" name="manufactureDate" required />
+    </div>
+
+    <button type="submit" class="bg-[#5e967d] hover:bg-[#1B4332] text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Crear Producto</button>
+  </form>
+
+  <div *ngIf="qrCodeUrl" class="mt-6">
+    <h3 class="text-xl font-semibold text-gray-800 mb-2">Código QR Generado:</h3>
+    <img [src]="qrCodeUrl" alt="Código QR" class="max-w-xs" />
   </div>
+</div>
