--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -63,21 +63,31 @@
   
   .features {
     background-color: #ecf0f1;
-    padding: 40px 20px;
     text-align: center;
     align-items: center; 
+    margin-bottom: 1rem;
   }
-  
+
   .features h2 {
     font-size: 2rem;
     margin-bottom: 30px;
+    font-family: 'Cormorant Garamond', serif;
+  }
+
+  .caracteristicas {
+    font-size: 2.5rem;
+    color: #34495e;
+    font-family: 'Cormorant Garamond', serif;
+    font-weight: 700;
+    padding: 30px;
+    text-align: center;
+    padding: 30px 20px;
   }
 
   .features h3 {
     font-size: 1.5rem;
     margin-bottom: 20px;
     color: #ffffff;
-    font-family: 'Pacifico', cursive;
     text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8);
   }
 
@@ -92,12 +102,16 @@
     gap: 30px;
     justify-content: center;
   }
+
+  h2.caracteristicas {
+    margin-bottom: 40px;
+  }
   
   .feature-item {
     max-width: 250px;
-    background-color: #5e967d;
+    background-color: #5cd266;
     padding: 20px;
-    border-radius: 8px;
+    border-radius: 60px;
     align-items: center; 
   }
   
@@ -155,7 +169,7 @@
   }
   
   button:hover {
-    background-color: #007bff;
+    background-color: #1c5b33;
     color: white;
   }
   
