--- a/src/app/create-ingredient/create-ingredient.component.html
+++ b/src/app/create-ingredient/create-ingredient.component.html
@@ -7,7 +7,27 @@
     </div>
 
     <div class="form-group">
-      <label for="origin" class="block text-gray-700 text-sm font-bold mb-2">Origen:</label>
+      <label for="provider" class="block text-gray-700 text-sm font-bold mb-2">Proveedor:</label>
+      <input type="text" id="provider" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" [(ngModel)]="ingredient.provider" name="provider" required placeholder="Ej: Ganadería Sostenible SA" />
+    </div>
+
+    <div class="form-group">
+      <label for="latitude" class="block text-gray-700 text-sm font-bold mb-2">Latitud:</label>
+      <input type="number" id="latitude" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" [(ngModel)]="ingredient.latitude" name="latitude" required placeholder="Ej: 4.5709" />
+    </div>
+
+    <div class="form-group">
+      <label for="longitude" class="block text-gray-700 text-sm font-bold mb-2">Longitud:</label>
+      <input type="number" id="longitude" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" [(ngModel)]="ingredient.longitude" name="longitude" required placeholder="Ej: -74.2973" />
+    </div>
+
+    <div class="form-group">
+      <label for="country" class="block text-gray-700 text-sm font-bold mb-2">País de Origen:</label>
+      <input type="text" id="country" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" [(ngModel)]="ingredient.country" name="country" required placeholder="Ej: Colombia" />
+    </div>
+
+    <div class="form-group">
+      <label for="origin" class="block text-gray-700 text-sm font-bold mb-2">Origen (Detallado):</label>
       <input type="text" id="origin" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" [(ngModel)]="ingredient.origin" name="origin" required placeholder="Ej: Llanos Orientales de Colombia" />
     </div>
 
